# coserial

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/coserial/: __main__.py  client.py  mcp_config_init.py  server.py  session.py
src/coserial/claude_preview/: launch.json  preview_proxy.py
src/coserial/embedded_web_ui/claude_preview/: preview_proxy.py
src/coserial/web_ui/: index.html
