[project]
name = "coserial"
version = "0.1.0"
description = "Collaborative serial debug bridge for humans and AI Agents"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pywin32>=312",
    "aiohttp>=3.9",
    # tkinter is part of the Python standard library
]

[project.scripts]
coserial = "coserial.__main__:main"
coserial-server = "coserial.server:main"
coserial-client = "coserial.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coserial"]
